<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    tools:context=".DetailInformation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/detailHeaderBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/add_to_favourite_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="204dp"
                android:layout_height="200dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/poster_description" />

            <Button
                android:id="@+id/add_to_favourite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="Add to favourite"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding = "8dp">

            <TextView
                android:id="@+id/original_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title_label"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                />

            <TextView android:id = "@+id/vote_average_label"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/vote_average_label"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    />

                <ImageView
                    android:id="@+id/stars_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/five_star"
                    android:contentDescription="@string/poster_description" />
            </LinearLayout>



            <TextView android:id = "@+id/release_date_label"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/release_date_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView android:id = "@+id/release_date"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:textSize = "24sp"
                android:layout_marginBottom="8dp"/>

            <TextView android:id = "@+id/overview_label"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/plot_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView android:id = "@+id/overview"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:textSize = "24sp"
                />

            <TextView
                android:id="@+id/trailers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TRAILERS"
                android:textSize="32sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_trailers"/>
            <TextView
                android:id="@+id/reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REVIEWS"
                android:textSize="32sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerview_reviews"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
</layout>